[gd_scene load_steps=10 format=3 uid="uid://dcvpxnk1vi847"]

[ext_resource type="Texture2D" uid="uid://cx2d53o2fen6b" path="res://Arts/Resources/Rock-icon.png" id="1_ekkvy"]
[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_fhapp"]
[ext_resource type="Texture2D" uid="uid://bsreshm1t7vba" path="res://Arts/Resources/Wood-icon.png" id="2_2yyba"]
[ext_resource type="Texture2D" uid="uid://2xi5fnehvbsx" path="res://Arts/Resources/Rock_ore-icon.png" id="2_kun3u"]
[ext_resource type="Texture2D" uid="uid://ckuiju75r00n" path="res://Arts/HUD/healthbarUnder.png" id="4_jvu7m"]
[ext_resource type="Texture2D" uid="uid://brpu3ogpn8u33" path="res://Arts/HUD/healthbarProgress.png" id="5_003gc"]
[ext_resource type="Texture2D" uid="uid://bfcukv83wjd1l" path="res://Arts/Resources/battery.png" id="5_lx0mq"]
[ext_resource type="Theme" uid="uid://e81g3sxbef5w" path="res://Resources/default_theme.tres" id="7_hnhho"]

[sub_resource type="LabelSettings" id="LabelSettings_h8b8r"]
line_spacing = -2.0
font_size = 8

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fhapp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Resources" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Wood" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Resources"]
layout_mode = 2
texture = ExtResource("2_2yyba")

[node name="WoodLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Resources"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Rock" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Resources"]
layout_mode = 2
texture = ExtResource("1_ekkvy")

[node name="RockLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Resources"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Ore" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Resources"]
layout_mode = 2
texture = ExtResource("2_kun3u")

[node name="OreLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Resources"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Battery" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Resources"]
layout_mode = 2
texture = ExtResource("5_lx0mq")

[node name="BatteryLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Resources"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 10

[node name="BoxContainer" type="BoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="PlayerHealthBar" type="TextureProgressBar" parent="Control/MarginContainer/MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_under = ExtResource("4_jvu7m")
texture_progress = ExtResource("5_003gc")

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/BoxContainer/PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 9.0
offset_right = 148.0
offset_bottom = 31.0
grow_horizontal = 2
theme = ExtResource("7_hnhho")
theme_override_font_sizes/font_size = 10

[node name="VictoryScreen" type="ColorRect" parent="Control"]
unique_name_in_owner = true
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.054902, 0.0627451, 0.47451)

[node name="CenterContainer" type="CenterContainer" parent="Control/VictoryScreen"]
layout_mode = 2
offset_right = 620.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VictoryScreen/CenterContainer"]
layout_mode = 2

[node name="WinLabel" type="Label" parent="Control/VictoryScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Congratulations! You beat the game..."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VictoryScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MainMenuButton" type="Button" parent="Control/VictoryScreen/CenterContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Control/VictoryScreen/CenterContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit"

[node name="DeathScreen" type="ColorRect" parent="Control"]
unique_name_in_owner = true
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.054902, 0.0627451, 0.47451)

[node name="CenterContainer" type="CenterContainer" parent="Control/DeathScreen"]
layout_mode = 2
offset_right = 620.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DeathScreen/CenterContainer"]
layout_mode = 2

[node name="DeathLabel" type="Label" parent="Control/DeathScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You lose..."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DeathScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MainMenuButton" type="Button" parent="Control/DeathScreen/CenterContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Control/DeathScreen/CenterContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -143.0
offset_right = -15.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "WASD to move
Use E to interact
Left click attack
Right click build
Shift to sprint
Scroll to zoom
"
label_settings = SubResource("LabelSettings_h8b8r")
horizontal_alignment = 2

[connection signal="lose" from="." to="." method="_on_lose"]
[connection signal="victory" from="." to="." method="_on_victory"]
[connection signal="item_selected" from="Control/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Control/VictoryScreen/CenterContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/VictoryScreen/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/DeathScreen/CenterContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/DeathScreen/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
